--- a/web/mask/index.html
+++ b/web/mask/index.html
@@ -6,6 +6,12 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1" />
+  <style>
+    @font-face {
+      font-family: Silver;
+      src: url(./Silver.ttf);
+    }
+  </style>
 </head>
 
 <body ontouchstart>
